--- a/Admin/Shared/MainLayout.razor
+++ b/Admin/Shared/MainLayout.razor
@@ -16,7 +16,7 @@
     </NotAuthorized>
     <Authorized>
         <MudLayout>
-            <MudAppBar Elevation="25">
+            <MudAppBar Elevation="25" Style="background-color:rgb(59,59,59)">
                 <MudHidden Breakpoint="Breakpoint.SmAndDown">
                     <MudIcon Icon="@Icons.Material.Filled.Home" Size="Size.Large" />
                 </MudHidden>
