--- a/Admin/Pages/Identity/RolePermissions.razor
+++ b/Admin/Pages/Identity/RolePermissions.razor
@@ -9,7 +9,7 @@
 <Header OnClose="Cancel" Title="@_title" Description="@_descr" />
 @if (!_loaded)
 {
-    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    <MudProgressCircular Class="ml-3" Color="Color.Primary" Indeterminate="true" />
 }
 else
 {
