--- a/Admin/Pages/Identity/Roles.razor
+++ b/Admin/Pages/Identity/Roles.razor
@@ -15,7 +15,7 @@
 <Header OnClose="Cancel" Title="Roller" Description="Rolleri Yönet." />
 @if (!_loaded)
 {
-    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    <MudProgressCircular Class="ml-3" Color="Color.Primary" Indeterminate="true" />
 }
 else
 {
