--- a/Admin/Pages/Identity/Users.razor
+++ b/Admin/Pages/Identity/Users.razor
@@ -13,7 +13,7 @@
 <Header OnClose="Cancel" Title="Kullanıcılar" Description="Kullanıcıları Yönet" />
 @if (!_loaded)
 {
-    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    <MudProgressCircular Class="ml-3" Color="Color.Primary" Indeterminate="true" />
 }
 else
 {
