--- a/Admin/Shared/MainLayout.razor
+++ b/Admin/Shared/MainLayout.razor
@@ -24,7 +24,7 @@
                     <MudIcon Icon="@Icons.Material.Filled.Home" Class="mr-2" Size="Size.Medium" />
                 </MudHidden>
                 <MudHidden Breakpoint="Breakpoint.Xs">
-                    <MudText Typo="Typo.h6" Class="ml-2">API Portal</MudText>
+                    <MudText Typo="Typo.h6" Class="ml-2">API Yönetim Sistemi</MudText>
                 </MudHidden>
                 <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
                     <MudText Typo="Typo.subtitle2" Class="ml-2">Api</MudText>
