--- a/Admin/Pages/Identity/Profile.razor
+++ b/Admin/Pages/Identity/Profile.razor
@@ -5,7 +5,7 @@
                 <div class="d-flex justify-center mb-4">
                     <MudAvatar Color="Color.Secondary" Style="height:200px; width:200px;">@_firstLetterOfFirstName</MudAvatar>
                 </div>
-                <MudText Typo="Typo.h6" Align="Align.Center">@UpdateUserRequest.FirstName @UpdateUserRequest.LastName</MudText>
+                <MudText Typo="Typo.h6" Align="Align.Center">@_firstName @_lastName</MudText>
                 <MudText Align="Align.Center">@_email</MudText>
             </MudCardContent>
         </MudCard>
