--- a/Admin/Pages/Auth/Login.razor
+++ b/Admin/Pages/Auth/Login.razor
@@ -9,7 +9,7 @@
                 <MudHidden Breakpoint="Breakpoint.Xs">
                     <MudItem xs="12" Class="mt-4">
                         <div class="d-flex justify-center">
-                            <MudText Typo="Typo.h6" Color="Color.Primary">API - PORTAL</MudText>
+                            <MudText Typo="Typo.h6" Color="Color.Primary">API Yönetim Sistemi</MudText>
                         </div>
                     </MudItem>
                 </MudHidden>
